ant target to launch the jspwiki tomcat, changing webapp path to root